--- a/client/SimpleChat/res/layout/activity_chat.xml
+++ b/client/SimpleChat/res/layout/activity_chat.xml
@@ -10,4 +10,66 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".ChatActivity" >
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="49dp" >
+
+        <TextView
+            android:layout_width="124dp"
+            android:layout_height="30dp"
+            android:layout_marginBottom="10dip"
+            android:text="@string/loggedUser" />
+
+        <TextView
+            android:id="@+id/loggedUserEditText"
+            android:layout_width="165dp"
+            android:layout_height="wrap_content"
+            android:editable="false"
+            android:ems="10"
+            android:inputType="textPersonName" />
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dip"
+        android:text="@string/messages" />
+
+    <EditText
+        android:id="@+id/messageHistory"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="1"
+        android:clickable="true"
+        android:editable="false"
+        android:gravity="top"
+        android:scrollbarSize="10px"
+        android:scrollbars="vertical" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="4"
+        android:orientation="horizontal" >
+
+        <EditText
+            android:id="@+id/message"
+            android:layout_width="158dp"
+            android:layout_height="fill_parent"
+            android:gravity="top" />
+
+        <Button
+            android:id="@+id/getMessageButton"
+            android:layout_width="90dp"
+            android:layout_height="fill_parent"
+            android:text="@string/sendMessage" />
+
+        <Button
+            android:id="@+id/sendMessageButton"
+            android:layout_width="90dp"
+            android:layout_height="fill_parent"
+            android:text="@string/getMessage" />
+    </LinearLayout>
+
 </LinearLayout>
