--- a/client/SimpleChat/res/layout/activity_login.xml
+++ b/client/SimpleChat/res/layout/activity_login.xml
@@ -1,11 +1,61 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".LoginActivity" >
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
+	android:orientation="vertical"
+    android:padding="10dip"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content">
+    
+    <TextView 
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dip"
+        android:text="@string/username"
+    />
+    
+    <EditText android:id="@+id/userNameEditText"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:singleLine="true"
+        android:hint="@string/setUserName"
+        android:password="false"
+    />
+    
+    <TextView 
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dip"
+        android:text="@string/password"
+    />
+    
+    <EditText android:id="@+id/passwordEditText"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:singleLine="true"
+        android:password="true"
+        android:hint="@string/setPassword"
+    /> 
+    <LinearLayout android:orientation="horizontal"
+    			  android:layout_width="fill_parent"
+    			  android:layout_height="wrap_content">
+			  
+    <Button
+        android:id="@+id/loginButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="loginButton_OnClick"
+        android:text="@string/login" />
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/cancel_loginButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="cleanButton_onClick"
+        android:text="@string/cleanButton" />
+
+	</LinearLayout>
+
+</LinearLayout>
+
+
