Se suben cambios con Timer, y con Validaciones Toast

--- a/client/SimpleChat/res/layout/activity_chat.xml
+++ b/client/SimpleChat/res/layout/activity_chat.xml
@@ -50,6 +50,8 @@
     <ListView
         android:id="@+id/messageHistory"
         android:layout_width="fill_parent"
+        android:stackFromBottom="true"
+        android:transcriptMode="alwaysScroll"
         android:layout_height="380dp" >
 
     </ListView>
